k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vanguard-api
  namespace: vanguard
  labels:
    app: vanguard-api
    app.kubernetes.io/part-of: vanguard-bot
spec:
  selector:
    app: vanguard-api
  ports:
    - name: http
      port: 80
      targetPort: 8090
  type: ClusterIP
